Removed the left and right margin from the header and footer

--- a/index.html
+++ b/index.html
@@ -49,57 +49,57 @@
     </div> <!-- end page header -->
 
 
+    <div id="content">
+      <div>
+        <a href="https://ucum.nlm.nih.gov">UCUM Resources</a>&nbsp; &nbsp;
+        <a href="demo.html">UCUM-LHC Demo</a>
+      </div>
 
-    <div>
-      <a href="https://ucum.nlm.nih.gov">UCUM Resources</a>&nbsp; &nbsp;
-      <a href="demo.html">UCUM-LHC Demo</a>
-    </div>
+      <h1 id="overview-title">The UCUM-LHC Library Overview</h1>
 
-    <h1 id="overview-title">The UCUM-LHC Library Overview</h1>
+      <p>The UCUM-LHC library is a javascript library that provides validation and
+      conversion services for the <a href="http://unitsofmeasure.org">Unified Code for
+      Units of Measure</a> (UCUM) code system created by the Regenstrief Institute, Inc.</p>
 
-    <p>The UCUM-LHC library is a javascript library that provides validation and
-    conversion services for the <a href="http://unitsofmeasure.org">Unified Code for
-    Units of Measure</a> (UCUM) code system created by the Regenstrief Institute, Inc.</p>
+      <p>The UCUM code system describes "all units of measures being contemporarily
+      used in international science, engineering, and business" (from the
+      <a href="http://unitsofmeasure.org/trac/">Unified Code for Units of Measure</a>
+      description).  The UCUM system uses dimensional analysis for conversion of
+      commensurable units, which eliminates the need to hardcode conversion functions
+      for most units.  In addition, the UCUM system accomodates validation of
+      unit codes built on other unit codes, e.g., mg/kg/h (milligram per killogram
+      per hour).</p>
 
-    <p>The UCUM code system describes "all units of measures being contemporarily
-    used in international science, engineering, and business" (from the
-    <a href="http://unitsofmeasure.org/trac/">Unified Code for Units of Measure</a>
-    description).  The UCUM system uses dimensional analysis for conversion of
-    commensurable units, which eliminates the need to hardcode conversion functions
-    for most units.  In addition, the UCUM system accomodates validation of
-    unit codes built on other unit codes, e.g., mg/kg/h (milligram per killogram
-    per hour).</p>
+      <h3>See the code in action</h3>
 
-    <h3>See the code in action</h3>
-
-    <p>Check out our <a href="demo.html">
-      demonstration page</a> that illustrates the validation and conversion
-      functions of the UCUM-LHC library.</p>
-
-
-    <h3>Using the UCUM-LHC Code</h3>
-
-    <p>The UCUM-LHC library can be downloaded and installed as a
-      <a href="http://bower.io">bower</a> package or an
-      <a href="https://www.npmjs.com/package/@lhncbc/ucum-lhc">npm</a> package.
-      The installed dist/ucum-lhc.js module package includes the code you need
-      for the validation and conversion functions as well as the UCUM code
-      definitions file.  The UCUM-LHC code provides validation and conversion
-      capabilities for units of measure.  Those functions are accessed from the
-      ucumPkg.UcumLhcUtils class.  Descriptions of those functions are included
-      in the README.md file in the UCUM-LHC
-      <a href="https://github.com/lhncbc/ucum-lhc">GitHub</a> repository.</p>
-
-      <h3>Clone the ucum-lhc repository from GitHub</h3>
+      <p>Check out our <a href="demo.html">
+        demonstration page</a> that illustrates the validation and conversion
+        functions of the UCUM-LHC library.</p>
 
 
-    <p>You may clone the ucum-lhc repository from GitHub
-      <a href="https://github.com/lhncbc/ucum-lhc">here</a>.  The repository
-    includes all the code found in the ucum-lhc bower package as well as
-    supporting code in the form of test code, data import/export code,
-    and the code for the demo site.  Instructions for cloning a GitHub
-    repository are on the GitHub page.</p>
-<br>
+      <h3>Using the UCUM-LHC Code</h3>
+
+      <p>The UCUM-LHC library can be downloaded and installed as a
+        <a href="http://bower.io">bower</a> package or an
+        <a href="https://www.npmjs.com/package/@lhncbc/ucum-lhc">npm</a> package.
+        The installed dist/ucum-lhc.js module package includes the code you need
+        for the validation and conversion functions as well as the UCUM code
+        definitions file.  The UCUM-LHC code provides validation and conversion
+        capabilities for units of measure.  Those functions are accessed from the
+        ucumPkg.UcumLhcUtils class.  Descriptions of those functions are included
+        in the README.md file in the UCUM-LHC
+        <a href="https://github.com/lhncbc/ucum-lhc">GitHub</a> repository.</p>
+
+        <h3>Clone the ucum-lhc repository from GitHub</h3>
+
+
+      <p>You may clone the ucum-lhc repository from GitHub
+        <a href="https://github.com/lhncbc/ucum-lhc">here</a>.  The repository
+      includes all the code found in the ucum-lhc bower package as well as
+      supporting code in the form of test code, data import/export code,
+      and the code for the demo site.  Instructions for cloning a GitHub
+      repository are on the GitHub page.</p>
+  </div> <!-- content -->
 
   <!-- page footer -->
   <div id="fine-print">
