--- a/demo/UcumEssenceModifications.html
+++ b/demo/UcumEssenceModifications.html
@@ -19,7 +19,7 @@
     </script>
 </head>
 <body id="demobody">
-        <!-- Google Tag Manager (noscript) -->
+      <!-- Google Tag Manager (noscript) -->
     <noscript><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-59GQ6JK"
         height="0" width="0" style="display:none;visibility:hidden"
@@ -42,80 +42,83 @@
 
 
 
-<div>
-    <a href="https://ucum.nlm.nih.gov">UCUM Resources</a>&nbsp; &nbsp;
-    <a href="index.html">UCUM-LHC Overview</a>&nbsp; &nbsp;
-    <a href="demo.html">UCUM Demo</a>
-</div>
+  <div id="content">
+    <div>
+        <a href="https://ucum.nlm.nih.gov">UCUM Resources</a>&nbsp; &nbsp;
+        <a href="index.html">UCUM-LHC Overview</a>&nbsp; &nbsp;
+        <a href="demo.html">UCUM Demo</a>
+    </div>
 
-<h1>Modifications made to the ucum-essence.xml file</h1>
-<BR>
-<h3>Changes in the order of the unit definitions</h3>
-<div id="pageText" class="limitWidth">
-<p>UCUM definitions build on the base units.  For example, the code <b>N</b>
-    for newton is built from <b>kg.m/s2</b>, which means that the units for
-    <b>g</b> (gram - with the prefix k indicating a kilogram), <b>m</b> (meter),
-    and <b>s</b> (second) must all be defined before the newton unit can be
-    defined.</p>
+    <h1>Modifications made to the ucum-essence.xml file</h1>
+    <BR>
+    <h3>Changes in the order of the unit definitions</h3>
+    <div id="pageText" class="limitWidth">
+    <p>UCUM definitions build on the base units.  For example, the code <b>N</b>
+        for newton is built from <b>kg.m/s2</b>, which means that the units for
+        <b>g</b> (gram - with the prefix k indicating a kilogram), <b>m</b> (meter),
+        and <b>s</b> (second) must all be defined before the newton unit can be
+        defined.</p>
 
-<p>The ucum-essence.xml file is therefore processed sequentially, so that units
-    can be built on previous definitions.  Every once in a while the unit
-    definitions in the ucum-essence.xml don&apos;t follow this convention, with
-    the definition of one unit being based on another unit whose definition
-    has not yet been read.  See the list below for these instances.  Comments
-    have been inserted in the ucum-essence.xml file to document the moves.</p>
+    <p>The ucum-essence.xml file is therefore processed sequentially, so that units
+        can be built on previous definitions.  Every once in a while the unit
+        definitions in the ucum-essence.xml don&apos;t follow this convention, with
+        the definition of one unit being based on another unit whose definition
+        has not yet been read.  See the list below for these instances.  Comments
+        have been inserted in the ucum-essence.xml file to document the moves.</p>
 
-<ul>
-<li>The order of definitions for <b>gon</b> and <b>deg</b> were switched.
-    <b>gon</b> was defined immediately before <b>deg</b> but <b>gon</b> is
-    built on <b>deg</b> (<b>deg</b>.(0.9)).</li>
+    <ul>
+    <li>The order of definitions for <b>gon</b> and <b>deg</b> were switched.
+        <b>gon</b> was defined immediately before <b>deg</b> but <b>gon</b> is
+        built on <b>deg</b> (<b>deg</b>.(0.9)).</li>
 
-<li>The definition of <b>eV</b> was moved from a point preceding <b>[e]</b> to
-    a point following <b>[e]</b>.  <b>eV</b> is defined by <b>[e]</b>
-    (<b>[e].V</b>).</li>
+    <li>The definition of <b>eV</b> was moved from a point preceding <b>[e]</b> to
+        a point following <b>[e]</b>.  <b>eV</b> is defined by <b>[e]</b>
+        (<b>[e].V</b>).</li>
 
-<li>The definition of <b>[lbf_av]</b> was moved from a point preceding
-    <b>[lb_av]</b> to a point following <b>[lb_av]</b>.  <b>[lbf_av]</b> is
-    defined by <b>[lb_av]</b> (<b>[lb_av]</b>/16).</li>
-</ul>
-<BR>
-<h3>Additions</h3>
-
-<p>A definition was added for the unit <b>Torr</b>, between the definition for
-    <b>[g]</b> and the definition for <b>atm</b>.  The definition is as follows:
-</p>
-<pre>
-   &lt;unit Code="Torr" CODE="Torr" isMetric="no" class="const"&gt;
-      &lt;name&gt;Torr&lt;/name&gt;
-      &lt;printSymbol&gt;Torr&lt;/printSymbol&gt;
-      &lt;property&gt;pressure&lt;/property&gt;
-      &lt;value Unit="Pa" UNIT="PAL" value="133.322"&gt;133.322&lt;/value&gt;
-   &lt;/unit&gt;
-</pre>
-</div> <!-- pageText -->
-<!-- page footer -->
-<div id="fine-print">
-    <ul class="horz-list">
-        <li><a title="NLM copyright information"  href="http://www.nlm.nih.gov/copyright.html">Copyright</a></li>
-        <li><a title="NLM privacy policy" href="http://www.nlm.nih.gov/privacy.html">Privacy</a></li>
-        <li><a title="NLM accessibility" href="http://www.nlm.nih.gov/accessibility.html" >Accessibility</a></li>
-        <li><a title="NLM viewers and players" href="http://www.nlm.nih.gov/plugins.html">Viewers & Players</a></li>
-        <li><a title="NIH Freedom of Information Act office"  href="http://www.nih.gov/icd/od/foia/index.htm"
-        >Freedom of Information Act</a></li>
-        <li class="last-item"><a title="Contact Us" href="https://lhncbc.nlm.nih.gov/contact-us">
-            Contact Us</a></li>
+    <li>The definition of <b>[lbf_av]</b> was moved from a point preceding
+        <b>[lb_av]</b> to a point following <b>[lb_av]</b>.  <b>[lbf_av]</b> is
+        defined by <b>[lb_av]</b> (<b>[lb_av]</b>/16).</li>
     </ul>
-    <ul class="horz-list">
-        <li><a title="U.S. National Library of Medicine" href="http://www.nlm.nih.gov/"
-        >U.S. National Library of Medicine</a></li>
-        <li><a title="U.S. National Institutes of Health" href="http://www.nih.gov/"
-        >U.S. National Institutes of Health</a></li>
-        <li><a title="U.S. Department of Health and Human Services"  href="http://www.hhs.gov/"
-        >U.S. Department of Health and Human Services</a></li>
-        <li class="last-item"><a title="USA.gov" href="http://www.usa.gov/"><img
-                src="demo-dist/assets/images/USAgov.gif" alt="USA.gov" id="usagov"></a></li>
-    </ul>
-</div><!-- fine-print -->
-<!-- end page footer -->
+    <BR>
+    <h3>Additions</h3>
+
+    <p>A definition was added for the unit <b>Torr</b>, between the definition for
+        <b>[g]</b> and the definition for <b>atm</b>.  The definition is as follows:
+    </p>
+    <pre>
+       &lt;unit Code="Torr" CODE="Torr" isMetric="no" class="const"&gt;
+          &lt;name&gt;Torr&lt;/name&gt;
+          &lt;printSymbol&gt;Torr&lt;/printSymbol&gt;
+          &lt;property&gt;pressure&lt;/property&gt;
+          &lt;value Unit="Pa" UNIT="PAL" value="133.322"&gt;133.322&lt;/value&gt;
+       &lt;/unit&gt;
+    </pre>
+    </div> <!-- pageText -->
+  </div> <!-- content -->
+
+  <!-- page footer -->
+  <div id="fine-print">
+      <ul class="horz-list">
+          <li><a title="NLM copyright information"  href="http://www.nlm.nih.gov/copyright.html">Copyright</a></li>
+          <li><a title="NLM privacy policy" href="http://www.nlm.nih.gov/privacy.html">Privacy</a></li>
+          <li><a title="NLM accessibility" href="http://www.nlm.nih.gov/accessibility.html" >Accessibility</a></li>
+          <li><a title="NLM viewers and players" href="http://www.nlm.nih.gov/plugins.html">Viewers & Players</a></li>
+          <li><a title="NIH Freedom of Information Act office"  href="http://www.nih.gov/icd/od/foia/index.htm"
+          >Freedom of Information Act</a></li>
+          <li class="last-item"><a title="Contact Us" href="https://lhncbc.nlm.nih.gov/contact-us">
+              Contact Us</a></li>
+      </ul>
+      <ul class="horz-list">
+          <li><a title="U.S. National Library of Medicine" href="http://www.nlm.nih.gov/"
+          >U.S. National Library of Medicine</a></li>
+          <li><a title="U.S. National Institutes of Health" href="http://www.nih.gov/"
+          >U.S. National Institutes of Health</a></li>
+          <li><a title="U.S. Department of Health and Human Services"  href="http://www.hhs.gov/"
+          >U.S. Department of Health and Human Services</a></li>
+          <li class="last-item"><a title="USA.gov" href="http://www.usa.gov/"><img
+                  src="demo-dist/assets/images/USAgov.gif" alt="USA.gov" id="usagov"></a></li>
+      </ul>
+  </div><!-- fine-print -->
+  <!-- end page footer -->
 </body>
 </html>
