Moved common head tags into separate template, and added missing font

--- a/demo/ssi-templates/pages/UcumEssenceModifications.html
+++ b/demo/ssi-templates/pages/UcumEssenceModifications.html
@@ -1,22 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <!--#include file="../common-head-tags.shtml" -->
     <link rel="canonical" href="https://ucum.nlm.nih.gov/ucum-lhc/UcumEssenceModifications.html" />
-    <title>Changes made to the ucum-essence.xml file</title><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
-    <link rel="stylesheet" href="ucumDemo.min.css" />
-    <style id="antiClickjack">
-      body{display:none !important;}
-    </style>
-    <script type="text/javascript">
-      if (self === top) {
-        var antiClickjack = document.getElementById("antiClickjack");
-        antiClickjack.parentNode.removeChild(antiClickjack);
-      } else {
-        top.location = self.location;
-      }
-    </script>
+    <title>Changes made to the ucum-essence.xml file</title>
 </head>
 <body id="demobody">
   <!--#include file="../header.shtml" -->
