--- a/demo/ssi-templates/pages/demo.html
+++ b/demo/ssi-templates/pages/demo.html
@@ -1,41 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-59GQ6JK');</script>
-    <!-- End Google Tag Manager -->
-
-    <style id="antiClickjack">
-      body{display:none !important;}
-    </style>
-    <script type="text/javascript">
-      if (self === top) {
-        var antiClickjack = document.getElementById("antiClickjack");
-        antiClickjack.parentNode.removeChild(antiClickjack);
-      } else {
-        top.location = self.location;
-      }
-    </script>
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+     crossorigin="anonymous" />
+    <!--#include file="../common-head-tags.shtml" -->
     <link rel="canonical" href="https://ucum.nlm.nih.gov/ucum-lhc/demo.html" />
     <title>UCUM-LHC Demo</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="description" content="Unified Code of Units of Measure (UCUM) LHC unit code validator and conversion calculator">
     <meta name="keywords" content="UCUM,LHC,Unit Codes,Units of Measure">
     <link rel="stylesheet"
      href="https://clinicaltables.nlm.nih.gov/autocomplete-lhc-versions/18.1.1/autocomplete-lhc.min.css"
      integrity="sha384-JjNQGLGKwnlylBNqm5Al8cA7jt1nF5dHsagzjEEE85ZHogKi96zVUB2wehoMQAZ9"
      crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-     crossorigin="anonymous" />
-    <link href="ucumDemo.min.css" rel="stylesheet"/>
   </head>
   <body id="demobody" onhashchange="demoPkg.UcumDemo.getInstance().checkTabSwitch();"
         onload="demoPkg.UcumDemo.getInstance().buildAdvancedSettings();" >
