--- a/demo/ssi-templates/pages/demo.html
+++ b/demo/ssi-templates/pages/demo.html
@@ -132,7 +132,7 @@
                   demoPkg.UcumDemo.getInstance().toggleDisplay('cnvHints',
                                                                'toggleCnvHints',
                                                                'Hide', 'Show')">
-              syntax rules</span>.
+              syntax rules</span>
               </li>
             </ul>
             <div id="cnvHints" class="limitWidth" style="display: none">
@@ -172,7 +172,7 @@
                     demoPkg.UcumDemo.getInstance().toggleDisplay('valHints',
                                                                  'toggleValHints',
                                                                  'Hide', 'Show')">
-                    syntax rules</span>.
+                    syntax rules</span>
             </div>
             <div id="advancedSearchVal" style="display: none">
               <!-- this section is built in the demo code when the page is loaded -->
