--- a/demo/ssi-templates/pages/demo.html
+++ b/demo/ssi-templates/pages/demo.html
@@ -56,6 +56,7 @@
                   <div>
                     <input type="text" id="convertFromNum"
                       class="input-field input-number"
+                           aria-label="convert from number"
                       onchange=
                       "demoPkg.UcumDemo.getInstance().checkNumVal('convertFromNum')">
                   </div>
@@ -65,6 +66,7 @@
                     <div>
                     <span class="input-field">
                       <input type="text" id="convertFrom" class="input-field"
+                             aria-label="convert from unit"
                         placeholder="Enter UCUM code ...">
                     </span>
                     <div id="convertFromName" class="unit-name" wrap="soft"></div>
@@ -79,6 +81,7 @@
                   <div>
                     <input type="text" id="convertToNum"
                       class="input-field input-number"
+                           aria-label="convert to number"
                       onchange=
                       "demoPkg.UcumDemo.getInstance().checkNumVal('convertToNum')">
                   </div>
@@ -88,6 +91,7 @@
                   <div>
                     <span class="input-field">
                       <input type="text" id="convertTo" class="input-field"
+                             aria-label="convert to unit"
                         placeholder="Enter UCUM code ...">
                     </span>
                     <div id="convertToName" class="unit-name" wrap="soft"></div>
@@ -106,14 +110,18 @@
 
               </div> <!-- outer-container -->
               <div id="molecular-weight">
-                Molecular weight of the substance being converted: &nbsp;
-                <input type="text" id="moleWeight"
+                <label>
+                  Molecular weight of the substance being converted: &nbsp;
+                  <input type="text" id="moleWeight"
                        onchange="demoPkg.UcumDemo.getInstance().checkNumVal('moleWeight')">
+                </label>
               </div>
               <div id="charge-div">
-                Charge/valence of the substance being converted (as a positive integer): &nbsp;
-                <input type="text" id="charge"
+                <label>
+                  Charge/valence of the substance being converted (as a positive integer): &nbsp;
+                  <input type="text" id="charge"
                        onchange="demoPkg.UcumDemo.getInstance().checkNumVal('charge')">
+                </label>
               </div>
               <span id="advSearchOpts" type="button" class="standalone-button"
                     onclick="demoPkg.UcumDemo.getInstance().toggleDisplay(
