--- a/demo/ssi-templates/pages/demo.html
+++ b/demo/ssi-templates/pages/demo.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-     crossorigin="anonymous" />
+          onerror="this.onerror=null;this.href='bootstrap.min.css';this.removeAttribute('integrity');this.removeAttribute('crossorigin');"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+          crossorigin="anonymous">
     <!--#include file="../common-head-tags.shtml" -->
     <link rel="canonical" href="https://ucum.nlm.nih.gov/ucum-lhc/demo.html" />
     <title>UCUM-LHC Demo</title>
@@ -280,7 +282,15 @@
      crossorigin="anonymous"></script>
     <script src="./ucum-demo.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-     crossorigin="anonymous"></script>
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+    <script>
+      if (!window.bootstrap) { // Fallback to use local file if the bootstrap object is not present
+        var newScript = document.createElement("script");
+        newScript.setAttribute("src", "bootstrap.bundle.min.js");
+        document.getElementsByTagName("head")[0].appendChild(newScript);
+      }
+    </script>
     <script>
       const advSearchOpts = document.getElementById('advSearchOpts');
       advSearchOpts.addEventListener('keydown', (event) => {
