--- a/demo/ssi-templates/pages/demo.html
+++ b/demo/ssi-templates/pages/demo.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-          onerror="this.onerror=null;this.href='bootstrap.min.css';this.removeAttribute('integrity');this.removeAttribute('crossorigin');"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-          crossorigin="anonymous">
+          crossorigin="anonymous"
+          onerror='var newLink = document.createElement("link");
+            newLink.setAttribute("rel", "stylesheet");
+            newLink.setAttribute("href", "bootstrap.min.css");
+            document.getElementsByTagName("head")[0].appendChild(newLink);'>
     <!--#include file="../common-head-tags.shtml" -->
     <link rel="canonical" href="https://ucum.nlm.nih.gov/ucum-lhc/demo.html" />
     <title>UCUM-LHC Demo</title>
