Updated UCUM and bower links.

--- a/demo/ssi-templates/pages/index.html
+++ b/demo/ssi-templates/pages/index.html
@@ -16,12 +16,12 @@
       <h1 id="overview-title">The UCUM-LHC Library Overview</h1>
 
       <p>The UCUM-LHC library is a javascript library that provides validation and
-      conversion services for the <a href="http://unitsofmeasure.org">Unified Code for
+      conversion services for the <a href="https://ucum.org">Unified Code for
       Units of Measure</a> (UCUM) code system created by the Regenstrief Institute, Inc.</p>
 
       <p>The UCUM code system describes "all units of measures being contemporarily
       used in international science, engineering, and business" (from the
-      <a href="http://unitsofmeasure.org/trac/">Unified Code for Units of Measure</a>
+      <a href="https://ucum.org/ucum">Unified Code for Units of Measure</a>
       description).  The UCUM system uses dimensional analysis for conversion of
       commensurable units, which eliminates the need to hardcode conversion functions
       for most units.  In addition, the UCUM system accomodates validation of
@@ -38,7 +38,7 @@
       <h3>Using the UCUM-LHC Code</h3>
 
       <p>The UCUM-LHC library can be downloaded and installed as a
-        <a href="http://bower.io">bower</a> package or an
+        <a href="https://bower.io">bower</a> package or an
         <a href="https://www.npmjs.com/package/@lhncbc/ucum-lhc">npm</a> package.
         The installed dist/ucum-lhc.js module package includes the code you need
         for the validation and conversion functions as well as the UCUM code
